Swagger docs update
